<resources>
    <string name="app_name">OcsLockApp</string>
    <string name="scan">Scan</string>
    <string name="connect">Connect</string>
    <string name="lock_unlock">Lock/Unlock</string>
    <string name="enter_mac_address_and_press_connect">Enter Mac Address and press Lock/Unlock, mac address format must be like this : 80:E1:26:08:1C:01</string>
    <string name="enter_four_digit_passsowrd">Enter Four Digit Password.</string>
    <string name="enter_six_digit_master_code">Enter Six Digit Master code.</string>
    <string name="way_1">Save</string>
    <string name="next">Next</string>
    <string name="way_2">Way 2</string>
    <string name="wait_msg">Processing, Please wait...</string>
    <string name="scanning">Scanning...</string>
    <string name="enter_current_master_code">Enter Current 6 digit Master Code.</string>
    <string name="current_master_code">Enter Current Master Code</string>
    <string name="new_ms_code">Enter New Master Code</string>
    <string name="enter_four_digit_user_code">Enter Four Digit User Code</string>
    <string name="ocs_lock_demo">OCS Lock Demo</string>
</resources>