<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_four_digit_passsowrd"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:digits="0123456789"
            android:hint="1234"
            android:inputType="number"
            android:maxLength="6"
            android:text="1234"
            android:visibility="visible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_six_digit_master_code"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/edtMasterCode"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:digits="0123456789"
            android:hint="123456"
            android:inputType="number"
            android:maxLength="6"
            android:text="565656"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appBtnWay1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@color/design_default_color_error"
            android:text="@string/way_1"
            android:textColor="@color/white"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appBtnWay2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@color/design_default_color_error"
            android:text="@string/way_2"
            android:textColor="@color/white"
            android:visibility="visible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>