<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOcsLockNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvOcsMACID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvOcsMasterCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tvOcsUserCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:gravity="center_vertical"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20dp"
            android:visibility="visible" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_four_digit_passsowrd"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:digits="0123456789"
            android:hint="1234"
            android:inputType="number"
            android:maxLength="6"
            android:text="1234"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter_mac_address_and_press_connect"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtMacID"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="80:E1:26:08:1C:01"
            android:text="80:E1:26:08:1C:01"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appBtnConnect"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/design_default_color_error"
            android:text="@string/lock_unlock"
            android:textColor="@color/white"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/llProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/wait_msg"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:visibility="visible" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="or"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appBtnScan"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/design_default_color_error"
            android:text="@string/scan"
            android:textColor="@color/white"
            android:visibility="gone" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="Scan Listing if available"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvOCSLock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:visibility="gone">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>